[package]
name = "oggify"
version = "0.1.0"
authors = ["Lorenzo Pistone <blaffablaffa@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.8"
tokio-core = "0.1.2"
librespot-core = { git = "https://github.com/librespot-org/librespot.git" }
librespot-metadata = { git = "https://github.com/librespot-org/librespot.git" }
librespot-audio = { git = "https://github.com/librespot-org/librespot.git" }
regex = "1"
log = "0.4.0"
env_logger = "0.6.0"
scoped_threadpool = "0.1.*"
