[package]
name = "oggify"
version = "0.1.0"
authors = ["Lorenzo Pistone <blaffablaffa@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Download Spotify tracks to Ogg Vorbis format with a Premium account"
keywords = ["spotify"]
repository = "https://github.com/pisto/oggify"
readme = "README.md"

[dependencies]
tokio = { version = "1.13.0", features = ["rt-multi-thread", "time"] }
librespot-core = { git = "https://github.com/librespot-org/librespot.git", tag = "v0.3.1" }
librespot-metadata = { git = "https://github.com/librespot-org/librespot.git", tag = "v0.3.1" }
librespot-audio = { git = "https://github.com/librespot-org/librespot.git", tag = "v0.3.1" }
regex = "1.1.0"
log = "0.4.6"
env_logger = "0.6.0"
scoped_threadpool = "0.1.9"
